--- a/src/index.css
+++ b/src/index.css
@@ -57,10 +57,16 @@
     width: 0.5em; /* Adjust the width as needed */
   }
   
-  
-  
-  
-  
   .custom-scrollbar::-webkit-scrollbar-thumb:hover {
     background-color: #555; /* Change the scrollbar color on hover */
+  }
+
+  .cohort{
+    background: url(./assets/svg/ChPg.svg);
+  }
+
+  ::placeholder{
+    text-align: center;
+    font-size: 20px;
+    color: #888C91;
   }
